<resources>
    <string name="app_name">Password Wallet</string>
    <string name="app_description">Secure app where You can safely store Your passwords</string>
    <string name="user_login">Login</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="keep_password_hashed">Keep password hashed instead of HMAC</string>
    <string name="no_account_question">Don\'t have account? Create one.</string>
    <string name="already_have_account_question">Already have account? Log in.</string>
    <string name="register">Register</string>
    <string name="empty_data">Some fields are empty</string>
    <string name="different_passwords">Given passwords are different</string>
    <string name="login_exists">User with that login already exists</string>
    <string name="wrong_data">Wrong login or password</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Exit app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_passwords_stored">You don\'t have any password saved.</string>
    <string name="account_name">Account name</string>
    <string name="description">Description</string>
    <string name="description_optional">Description (optional)</string>
    <string name="save_password">Save password</string>
    <string name="error_login">Error occurred during login process</string>
    <string name="error_encrypting">Error occurred during encryption process</string>
</resources>